--- a/FaceD/package.json
+++ b/FaceD/package.json
@@ -6,14 +6,22 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.33",
+    "@types/react-dom": "^18.0.11",
     "clarifai": "^2.9.1",
-    "face-api.js": "^0.22.2",
+    "face-api.js": "^0.20.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-parallax-tilt": "^1.7.44",
+    "react-redux": "^8.0.5",
     "react-scripts": "^2.1.3",
+    "redux": "^4.2.1",
     "tachyons": "^4.12.0",
-    "web-vitals": "^2.1.4"
+    "typescript": "^5.0.3",
+    "web-vitals": "^2.1.4",
+    "autoprefixer": "^10.4.13"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,5 +46,17 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "prettier": {
+    "printWidth": 80,
+    "tabWidth": 2,
+    "useTabs": false,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "all",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false,
+    "fluid": false
   }
+ 
 }
